# TwinRAD

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  agent.md  agent.md.bak  pyproject.toml  requirements.txt
client/: client.py
configs/: logging_config.py  settings.py
dashboard/: app.py  settings.py
playground/: gpt-oss-20B-test.py  one_on_one_meeting.py
server/: server.py  settings.py
src/twinrad/: main.py
src/twinrad/agents/: base_agent.py  evaluator_agent.py  gourmet_agent.py  introspection_agent.py  prompt_generator.py
src/twinrad/agents/blue_team/: security_engineer.py  soc_analyst.py  threat_hunter.py  vulnerability_management_analyst.py
src/twinrad/agents/common/: base_agent.py  dummy_agent.py  generic_agent.py  team_leader.py
src/twinrad/agents/debate/: __init__.py  agree.py  disagree.py  neural.py
src/twinrad/agents/deceptive_agents/: baseline_agents.py  deceptive_roles.py
src/twinrad/agents/knowledge/: curation.py  retrieval.py  synthesis.py
src/twinrad/agents/red_team/: ethical_hacker.py  penetration_tester.py
src/twinrad/agents/target_agents/: gourmet_agent.py
src/twinrad/agents/target_agents/deception/: __init__.py  baseline.py  deceptive_roles.py
src/twinrad/clients/: base_client.py  client_manager.py
src/twinrad/clients/handlers/: base_handler.py  gemini_handler.py  openai_handler.py  vllm_handler.py
src/twinrad/configs/: logging_config.py  settings.py
src/twinrad/core/agents/: base_agent.py  generic_agent.py
src/twinrad/core/agents/blue_team/: digital_forensics_analyst.py  incident_responder.py
src/twinrad/core/agents/red_team/: penetration_tester.py  social_engineer.py
src/twinrad/core/clients/: client_manager.py
src/twinrad/core/clients/handlers/: base_handler.py  gemini_handler.py  openai_handler.py  vllm_handler.py
src/twinrad/core/configs/: settings.py
src/twinrad/core/groups/: base_group.py  base_manager.py  generic_group.py  generic_manager.py
src/twinrad/core/schemas/: agents.py  clients.py  groups.py  tools.py  workflows.py
src/twinrad/core/tools/: base_tool.py  embeddings.py
src/twinrad/core/workflows/: base_flow.py  termination.py
src/twinrad/groups/common/: base_group.py  base_manager.py  generic_group.py  generic_manager.py
src/twinrad/groups/debate/: group_chat.py  group_room.py
src/twinrad/groups/rooms/: debate.py
src/twinrad/schemas/: agents.py  clients.py  graphs.py  groups.py  messages.py  tools.py
src/twinrad/threat_hunting/debate/: agents.py  groups.py  rooms.py  schemas.py  workflows.py
src/twinrad/threat_hunting/knowledge/: agents.py  graphs.py  schemas.py  tools.py
src/twinrad/tools/common/: base_tool.py
src/twinrad/tools/knowledge/: curation.py  retrieval.py
src/twinrad/workflows/: red_team_flow.py
src/twinrad/workflows/common/: base_flow.py  termination.py
src/twinrad/workflows/debate/: debate_flow.py
src/twinrad/workflows/deception/: deceptive_goals.py
tests/core/clients/: test_client_manager.py
tests/core/clients/handlers/: test_gemini_handler.py  test_openai_handler.py  test_vllm_handler.py
tests/core/groups/: test_group_chat.py  test_group_manager.py
tests/core/tools/: test_embeddings.py
tests/threat_hunting/: test_knowledge_agents.py  test_knowledge_tools.py
tests/unit/agents/knowledge/: test_agents_knowledge_retrieval.py
tests/unit/clients/: test_client_manager.py
tests/unit/clients/handlers/: test_gemini_handler.py  test_openai_handler.py  test_vllm_handler.py
tests/unit/group_chat/: test_group_chat.py
tests/unit/groups/common/: test_group_chat.py  test_group_manager.py
tests/unit/tools/knowledge/: test_retrieval.py  test_tools_knowledge_curation.py  test_tools_knowledge_retrieval.py
twinrad/: main.py
twinrad/agents/: attack_state_agent.py  base_agent.py  dummy_agent.py  evaluator_agent.py  gourmet_agent.py  introspection_agent.py  planner_agent.py  prompt_generator.py
twinrad/schemas/: state_engine.py
twinrad/workflows/: red_team_flow.py
