[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinrad"
version = "0.2.0"
description = "A multi-agent red teaming framework for testing LLM safety and robustness"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "TwinRAD Team"}
]
keywords = ["ai", "security", "red-team", "llm", "safety", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "ag2>=0.9.8",
    "altair>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-socketio>=5.0.0",
    "python-engineio>=4.0.0",
    "streamlit>=1.30.0",
    "numpy>=1.20.0,<3.0.0",
    "pandas>=1.3.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.0.0",
    "eventlet>=0.30.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/username/twinrad"
Repository = "https://github.com/username/twinrad.git"
Issues = "https://github.com/username/twinrad/issues"

[project.scripts]
twinrad = "twinrad.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
twinrad = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"