[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinrad"
version = "0.1.0"
description = "A multi-agent red teaming framework for testing LLM safety and robustness"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "TwinRAD Team"}
]
keywords = ["ai", "security", "red-team", "llm", "safety", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.30.0",
    "openai==1.99.9",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "torch==2.6.0",
    "transformers==4.56.0",
    "vllm==0.8.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/username/twinrad"
Repository = "https://github.com/username/twinrad.git"
Issues = "https://github.com/username/twinrad/issues"

[project.scripts]
twinrad = "twinrad.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
twinrad = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"